@@ -8,7 +8,7 @@
   <tr align="center" bgcolor="#e4e4e4">
     <td>
       <h1><big><font color="#3c34ec"><i>NuttX README Files</i></font></big></h1>
-      <p>Last Updated: August 31, 2013</p>
+      <p>Last Updated: October 24, 2013</p>
     </td>
   </tr>
 </table>
@@ -131,6 +131,8 @@
  |   |   |   `- <a href="http://sourceforge.net/p/nuttx/git/ci/master/tree/nuttx/configs/olimex-lpc1766stk/README.txt"><b><i>README.txt</i></b></a>
  |   |   |- olimex-lpc2378/
  |   |   |   `- <a href="http://sourceforge.net/p/nuttx/git/ci/master/tree/nuttx/configs/olimex-lpc2378/README.txt"><b><i>README.txt</i></b></a>
+ |   |   |- olimex-stm32-p207/
+ |   |   |   `- <a href="http://sourceforge.net/p/nuttx/git/ci/master/tree/nuttx/configs/olimex-stm32-p207/README.txt"><b><i>README.txt</i></b></a>
  |   |   |- olimex-strp711/
  |   |   |   `- <a href="http://sourceforge.net/p/nuttx/git/ci/master/tree/nuttx/configs/olimex-strp711/README.txt"><b><i>README.txt</i></b></a>
  |   |   |- open1788/
