@@ -1059,6 +1059,8 @@ nuttx
  |   |   `- README.txt
  |   |- olimex-lpc2378/
  |   |   `- README.txt
+ |   |- olimex-stm32-p207/
+ |   |   `- README.txt
  |   |- olimex-strp711/
  |   |   `- README.txt
  |   |- open1788/
