@@ -51,7 +51,7 @@
 #include <nuttx/usb/usbdev_trace.h>
 #include "stm32.h"
 #include "stm32_otgfs.h"
-#include "p207-internal.h"
+#include "olimex-stm32-p207.h"
 
 #ifdef CONFIG_STM32_OTGFS
 
@@ -229,14 +229,14 @@ xcpt_t stm32_setup_overcurrent(xcpt_t handler)
  *   Enable/disable driving of VBUS 5V output.  This function must be provided be
  *   each platform that implements the STM32 OTG FS host interface
  *
- *   "On-chip 5 V VBUS generation is not supported. For this reason, a charge pump 
- *    or, if 5 V are available on the application board, a basic power switch, must 
- *    be added externally to drive the 5 V VBUS line. The external charge pump can 
- *    be driven by any GPIO output. When the application decides to power on VBUS 
- *    using the chosen GPIO, it must also set the port power bit in the host port 
+ *   "On-chip 5 V VBUS generation is not supported. For this reason, a charge pump
+ *    or, if 5 V are available on the application board, a basic power switch, must
+ *    be added externally to drive the 5 V VBUS line. The external charge pump can
+ *    be driven by any GPIO output. When the application decides to power on VBUS
+ *    using the chosen GPIO, it must also set the port power bit in the host port
  *    control and status register (PPWR bit in OTG_FS_HPRT).
  *
- *   "The application uses this field to control power to this port, and the core 
+ *   "The application uses this field to control power to this port, and the core
  *    clears this bit on an overcurrent condition."
  *
  * Input Parameters:
@@ -252,7 +252,7 @@ xcpt_t stm32_setup_overcurrent(xcpt_t handler)
 void stm32_usbhost_vbusdrive(int iface, bool enable)
 {
   DEBUGASSERT(iface == 0);
-  
+
   if (enable)
     {
       /* Enable the Power Switch by driving the enable pin low */
@@ -260,9 +260,9 @@ void stm32_usbhost_vbusdrive(int iface, bool enable)
       stm32_gpiowrite(GPIO_OTGFS_PWRON, false);
     }
   else
-    { 
+    {
       /* Disable the Power Switch by driving the enable pin high */
- 
+
       stm32_gpiowrite(GPIO_OTGFS_PWRON, true);
     }
 }
@@ -287,6 +287,3 @@ void stm32_usbsuspend(FAR struct usbdev_s *dev, bool resume)
 #endif
 
 #endif /* CONFIG_STM32_OTGFS */
-
-
-
